src/objects/Plant_Code_del__c/Plant_Code_del__c.object-meta.xml
<CustomObject>
    <description>Custom Object Plant Code</description>
    <label>Plant Code</label>
    <nameField>
        <label>Plant Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>