src/objects/Plant_Code_del__c/fields/Backup_Account_Opener__c.field-meta.xml
<CustomField>
    <fullName>Backup_Account_Opener__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backup Account Opener</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plant_Codes1</relationshipName>
    <type>Lookup</type>
</CustomField>