src/objects/Plant_Code_del__c/fields/Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code__c</fullName>
    <label>Plant Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>