src/objects/Plant_Code_del__c/fields/Plant_Code_Master__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code_Master__c</fullName>
    <label>Plant Code Master</label>
    <referenceTo>Plant_Code_Master__c</referenceTo>
    <relationshipLabel>Plant Codes</relationshipLabel>
    <relationshipName>Plant_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>