src/objects/Plant_Code_del__c/fields/Primary_Account_Opener__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Opener__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Account Opener</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plant_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>