src/objects/Plant_Code_del__c/listViews/All_NoPlantMaster.listView-meta.xml
<ListView>
    <fullName>All_NoPlantMaster</fullName>
    <columns>NAME</columns>
    <columns>Plant_Code__c</columns>
    <columns>SBU__c</columns>
    <columns>CBT__c</columns>
    <columns>CBT_Team__c</columns>
    <columns>Primary_Account_Opener__c</columns>
    <columns>Backup_Account_Opener__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plant_Code__c</field>
        <operation>equals</operation>
        <value>1015</value>
    </filters>
    <label>All - NoPlantMaster</label>
</ListView>