src/objects/Plant_Code_del__c/listViews/COMDEV.listView-meta.xml
<ListView>
    <fullName>COMDEV</fullName>
    <columns>Plant_Code_Master__c</columns>
    <columns>NAME</columns>
    <columns>Plant_Code__c</columns>
    <columns>SBU__c</columns>
    <columns>CBT__c</columns>
    <columns>CBT_Team__c</columns>
    <columns>Primary_Account_Opener__c</columns>
    <columns>Backup_Account_Opener__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>COMDEV</value>
    </filters>
    <label>COMDEV</label>
</ListView>