src/objects/Plant_Code_del__c/listViews/Kiaralee.listView-meta.xml
<ListView>
    <fullName>Kiaralee</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>Plant_Code_Master__c</columns>
    <columns>NAME</columns>
    <columns>Plant_Code__c</columns>
    <columns>SBU__c</columns>
    <columns>CBT__c</columns>
    <columns>CBT_Team__c</columns>
    <columns>Primary_Account_Opener__c</columns>
    <columns>Backup_Account_Opener__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Account_Opener__c</field>
        <operation>contains</operation>
        <value>Kiaralee</value>
    </filters>
    <filters>
        <field>Backup_Account_Opener__c</field>
        <operation>contains</operation>
        <value>Kiaralee</value>
    </filters>
    <label>Kiaralee</label>
</ListView>