src/objects/Plant_Code_del__c/listViews/Owner.listView-meta.xml
<ListView>
    <fullName>Owner</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>Plant_Code__c</columns>
    <columns>SBU__c</columns>
    <columns>CBT__c</columns>
    <columns>CBT_Team__c</columns>
    <columns>Primary_Account_Opener__c</columns>
    <columns>Backup_Account_Opener__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>notContain</operation>
        <value>Admin</value>
    </filters>
    <label>Owner</label>
</ListView>